# mpnets

./: README.md  pyproject.toml  self_organizing_multiparadigm_networks.ipynb
mpnets/: mpnet.py
mpnets/core/: graph_executor.py  somp_cell.py
mpnets/layers/: base_dynamic_multi_input_encoder.py  growing_layer.py  leaky_spiking_bucket.py  somp_cell.py  torch_dynamic_multi_input_encoder.py
mpnets/nodes/: growing_node.py  node.py  somp.py
mpnets/utils/: misc.py  nn.py  parsing.py
notebooks/: parser.ipynb  parser.py  parsing-ii.ipynb  rgnet-old.py  rgnet.py  self_organizing_multiparadigm_networks.ipynb
tests/: parser.py  test_rgnet.py
